--- a/src/components/components.css
+++ b/src/components/components.css
@@ -1,6 +1,46 @@
-.container{
+@import url(../colours.css);
+
+.container {
 	display: flex;
 	border-radius: 50px;
 	background-color: grey;
 	padding: 15px;
+}
+
+#navbar {
+	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+	background-color: var(--navbar);
+	width: 100%;
+	overflow: hidden;
+	display: flex;
+	justify-content: center;
+	flex-direction: row;
+	flex-flow: row;
+	font-size: 2em;
+}
+#navbar>*{
+	
+	color:var(--navbar-text);
+}
+
+#navbar>*:hover {
+	background-color: var(--navbar-highlight);
+	color:var(--navbar-text-highlight);
+}
+
+#navbar>*::after,
+#navbar>:first-child::before {
+	content: '';
+	background-color: var(--navbar);
+	margin-left: 5px;
+	margin-right: 5px;
+	width: 5px;
+	height: 100%;
+	border-radius: 5px;
+	border-color: var(--navbar-secondary);
+	border-style: solid;
+}
+#navbar>*:hover::after,
+#navbar>:first-child:hover::before{
+	border-color: var(--navbar-secondary-highlight);
 }
