--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,7 +1,7 @@
 ---
 import PixelImage from "../components/PixelImage.astro";
 import Overlay from "../layouts/Overlay.astro";
-import muffin404 from "../assets/404-muffin.png";
+import muffin404 from "../assets/404-muffin.png?url";
 ---
 
 <Overlay title="404 | Page not found">
