--- a/src/components/CreationPreview.astro
+++ b/src/components/CreationPreview.astro
@@ -21,7 +21,7 @@ const { data, slug } = Astro.props;
 		<div class="row my-1 mx-2 gap-2">
 			<div class="col-auto px-0">
 				<a
-					href={`/creation/${slug}`}
+					href={`/creations/${slug}`}
 					class="btn btn-primary btn-sm"
 					>View details</a
 				>
@@ -51,7 +51,7 @@ const { data, slug } = Astro.props;
 			<div class="card-footer text-center text-body-secondary">
 				<div class="row">
 					<div class="col">
-						Released <Countdown date={+data.released} />
+						<Countdown date={+data.released} />
 					</div>
 				</div>
 			</div>
