--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,6 @@
 ---
+import { ViewTransitions } from "astro:transitions";
 import logo from "../assets/logo.png";
-import { images } from "../components/Icon";
 
 import { isOnline } from "../scripts/data";
 
@@ -53,6 +53,7 @@ const online = import.meta.env.PROD || isOnline();
 			href="/src/styles/global.css"
 		/>
 		<script
+			is:inline
 			src={online
 				? "https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
 				: "/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"}
@@ -63,7 +64,7 @@ const online = import.meta.env.PROD || isOnline();
 		<link
 			rel="preload"
 			as="image"
-			href={images.logo}
+			href={logo.src}
 		/>
 		<base href={Astro.url.origin} />
 
@@ -79,7 +80,7 @@ const online = import.meta.env.PROD || isOnline();
 		/>
 		<link
 			rel="icon"
-			href={logo}
+			href={logo.src}
 		/>
 
 		<link
@@ -88,6 +89,7 @@ const online = import.meta.env.PROD || isOnline();
 			title="RSS"
 			href="/rss"
 		/>
+		<ViewTransitions fallback="none" />
 
 		<!-- Head slot -->
 		<slot name="head" />
