--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,7 +1,7 @@
 ---
 import { capitaliseWords } from "../lib";
 import Icon from "../components/Icon";
-import ThemePicker from "./ThemePicker.astro";
+// import ThemePicker from "./ThemePicker.astro";
 import { name, paths } from "../scripts/data";
 ---
 
@@ -75,7 +75,8 @@ import { name, paths } from "../scripts/data";
 						<hr />
 					</li>
 					<li class="nav-item my-auto">
-						<ThemePicker />
+						<!-- For some reason this doesn't work after I updated astro so I'm just going to go with it and remove it until I can be bothered to fix it ::D -->
+						<!-- <ThemePicker /> -->
 						<span
 							class="dark-invisible"
 							data-bs-toggle="tooltip"
