commented out light mode warning
I forgot to comment this out when disabling the themepicker

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -76,14 +76,14 @@ import { name, paths } from "../scripts/data";
 					</li>
 					<li class="nav-item my-auto">
 						<!-- For some reason this doesn't work after I updated astro so I'm just going to go with it and remove it until I can be bothered to fix it ::D -->
-						<!-- <ThemePicker /> -->
+						<!-- <ThemePicker />
 						<span
 							class="dark-invisible"
 							data-bs-toggle="tooltip"
 							data-bs-title="This site was designed with dark mode in mind because I am a dark mode user. Light mode should work but may be less functional or have less styling"
 						>
 							<Icon iconName="exclamation-triangle" />
-						</span>
+						</span> -->
 					</li>
 					<li class="nav-item my-auto">
 						<nav
