fixed global css file linking

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -50,7 +50,7 @@ const online = import.meta.env.PROD || isOnline();
 		/>
 		<link
 			rel="stylesheet"
-			href="/src/styles/global.css"
+			href="/global.css"
 		/>
 		<script
 			is:inline
