--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,7 +1,7 @@
 ---
 import { capitaliseWords } from "../lib";
 import Icon from "../components/Icon";
-// import ThemePicker from "./ThemePicker.astro";
+import ThemePicker from "./ThemePicker.astro";
 import { name, paths } from "../scripts/data";
 ---
 
@@ -47,7 +47,7 @@ import { name, paths } from "../scripts/data";
 				id="headerSupportedContent"
 			>
 				<ul
-					class="navbar-nav me-auto mb-2 mb-lg-0 navbar-nav-scroll"
+					class="navbar-nav w-100 mb-2 mb-lg-0 navbar-nav-scroll"
 					style="--bs-scroll-height: 50vh;"
 				>
 					{
@@ -76,16 +76,16 @@ import { name, paths } from "../scripts/data";
 					</li>
 					<li class="nav-item my-auto">
 						<!-- For some reason this doesn't work after I updated astro so I'm just going to go with it and remove it until I can be bothered to fix it ::D -->
-						<!-- <ThemePicker />
+						<ThemePicker />
 						<span
 							class="dark-invisible"
 							data-bs-toggle="tooltip"
 							data-bs-title="This site was designed with dark mode in mind because I am a dark mode user. Light mode should work but may be less functional or have less styling"
 						>
 							<Icon iconName="exclamation-triangle" />
-						</span> -->
+						</span>
 					</li>
-					<li class="nav-item my-auto">
+					<li class="nav-item ms-auto my-auto">
 						<nav
 							aria-label="breadcrumb"
 							class="col-auto flex-row"
@@ -104,6 +104,16 @@ import { name, paths } from "../scripts/data";
 											u += "/" + path;
 										}
 										const active = i != a.length - 1;
+										switch (u) {
+											case "/post":
+												u = "/posts/1/";
+												break;
+											case "/posts":
+												u = "/posts/1/";
+												break;
+											default:
+												break;
+										}
 										return (
 											<li
 												class:list={[
