updated transition on page content

--- a/src/layouts/Overlay.astro
+++ b/src/layouts/Overlay.astro
@@ -34,7 +34,10 @@ const title =
 
 	<Navbar slot="before-content" />
 
-	<div class="container min-vh-100">
+	<div
+		class="container min-vh-100"
+		transition:animate="slide"
+	>
 		<div class="row align-items-start">
 			<div class="col">
 				<main class:list={["px-3", "py-2"]}>
