Code cleanup and recommendations move
Deleted unnecessary comments, moved recommendations to new page, reworded README, fixed scrollbar issue, deleted unused files, moved lib.ts, changed font to Cabin, fixed some punctuation on my website release post and fixed an issue with the opacity of the header and footer (it was being made transparent instead of the background being transparent)

--- a/public/global.css
+++ b/public/global.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Cabin&display=swap");
+
 @media (min-width: 768px) {
 	.rounded-md-start {
 		border-bottom-left-radius: var(--bs-border-radius) !important;
@@ -32,4 +34,13 @@
 }
 [data-bs-theme="light"] .light-invisible {
 	display: none !important;
+}
+* {
+	font-family: "Cabin", sans-serif;
+}
+html,
+body {
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
 }
