--- a/src/components/PostPagination.astro
+++ b/src/components/PostPagination.astro
@@ -1,5 +1,5 @@
 ---
-import { range } from "../lib";
+import { range } from "../scripts/lib";
 import { getPostCollectionLength } from "../scripts/data";
 import Icon from "./Icon";
 export interface Props {
