--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,10 @@ import Icon from "./Icon";
 	class="z-3 sticky-bottom"
 	style="backdrop-filter: blur(2px); -webkit-backdrop-filter: blur(1px);"
 >
-	<nav class="navbar navbar-expand-sm bg-body-tertiary border-top opacity-50">
+	<nav
+		class="navbar navbar-expand-sm bg-body-tertiary border-top"
+		style="--bs-bg-opacity:0.5;"
+	>
 		<div class="container-fluid">
 			<div
 				class="collapse navbar-collapse"
@@ -35,10 +38,14 @@ import Icon from "./Icon";
 						<div class="nav-link active"></div>
 					</li>
 					<li class="nav-item">
-						<div class="d-flex">
+						<div
+							class="d-flex"
+							transition:name="footer-socials"
+							transition:persist
+							transition:animate="initial"
+						>
 							{
 								socials.map((v) => (
-									// <li class="nav-item">
 									<a
 										href={v.href}
 										title={v.name}
@@ -46,7 +53,6 @@ import Icon from "./Icon";
 									>
 										<Icon iconName={v.icon} />
 									</a>
-									// </li>
 								))
 							}
 						</div>
