--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,6 @@
 ---
 import Hero from "../components/Hero.astro";
-import Icon from "../components/Icon";
-// import WorkflowCarousel from "../components/WorkflowCarousel.astro";
 import Overlay from "../layouts/Overlay.astro";
-import { getHobbies, getRecommendations } from "../scripts/data";
-// const hobbies = await getHobbies();
 ---
 
 <Overlay title={`Homepage`}>
@@ -17,78 +13,10 @@ import { getHobbies, getRecommendations } from "../scripts/data";
 			process aimed both at other developers and people who are interested in
 			the progress of my game
 		</p>
-
-		{
-			/*<!-- I don't like how the carousel looks -->
-			<!-- <WorkflowCarousel /> -->*/
-		}
-
-		<!-- <h1>
-			I <Icon
-				iconName="heart-fill"
-				className="text-danger"
-			/>
-		</h1>
-
-		<ul
-			class="shadow-lg list-group text-start col-auto"
-			style="width: fit-content;"
-		>
-			{
-				hobbies.map((v) => (
-					<li class="list-group-item row d-flex p-0 m-0">
-						<div class="col-auto ms-auto py-2 text-start border-end align-items-center justify-content-center">
-							<div class="my-auto">
-								{typeof v !== "string" && v.emoji ? (
-									<Icon iconName={v.emoji} />
-								) : undefined}
-							</div>
-						</div>
-						<div class="col py-2">
-							{typeof v === "string" ? (
-								v
-							) : (
-								<>
-									{v.url ? (
-										<a
-											class="text-info link-underline link-underline-opacity-0 link-offset-2 stretched-link"
-											href={v.url}
-										>
-											{v.name}
-										</a>
-									) : (
-										v.name
-									)}
-								</>
-							)}
-						</div>
-					</li>
-				))
-			}
-		</ul> -->
-
-		<h1>My recommendations:</h1>
-		<ul>
-			{
-				getRecommendations().map((v) => (
-					<>
-						<li>
-							<a
-								href={v.link}
-								class="text-body link-offset-2"
-							>
-								{v.icon ? (
-									<Icon
-										iconName={v.icon}
-										className="text-info"
-									/>
-								) : undefined}
-								{v.name}
-							</a>
-						</li>
-					</>
-				))
-			}
-		</ul>
+		<p>
+			I create accessible and entertaining videos on my Youtube channel and my
+			blog covers the same material in more depth for those interested in the
+			details of how I created something
+		</p>
 	</div>
 </Overlay>
