--- a/src/components/CreationPreview.astro
+++ b/src/components/CreationPreview.astro
@@ -36,10 +36,11 @@ const { data, slug } = Astro.props;
 							rel="noopener noreferrer"
 							class="btn btn-primary btn-sm"
 						>
-							{v.title}
-							<small>
-								<Icon iconName="box-arrow-up-right" />
-							</small>
+							{v.title}&nbsp;
+							<Icon
+								iconName="box-arrow-up-right"
+								style={{ fontSize: ".625em" }}
+							/>
 						</a>
 					</div>
 				))
