--- a/src/pages/tools.astro
+++ b/src/pages/tools.astro
@@ -53,10 +53,11 @@ const toolBodies = await (async () => {
 												rel="noopener noreferrer"
 												class="btn btn-primary btn-sm"
 											>
-												{v2.title}
-												<small>
-													<Icon iconName="box-arrow-up-right" />
-												</small>
+												{v2.title}&nbsp;
+												<Icon
+													iconName="box-arrow-up-right"
+													style={{ fontSize: ".625em" }}
+												/>
 											</a>
 										) : undefined
 									)}
