--- a/src/layouts/Overlay.astro
+++ b/src/layouts/Overlay.astro
@@ -4,7 +4,7 @@ import type { MarkdownLayoutProps, MDXLayoutProps } from "astro";
 import Navbar from "../components/Navbar.astro";
 import Footer from "../components/Footer.astro";
 import type { postScheme } from "../content/config";
-import type { z } from "zod";
+import type { z } from "astro:content";
 import { name } from "../scripts/data";
 
 interface BaseProps {
