--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,14 +9,14 @@ import Overlay from "../layouts/Overlay.astro";
 
 		<h1>My Work</h1>
 		<p>
-			I am an indie games developer. I make videos about my game development
-			process aimed both at other developers and people who are interested in
-			the progress of my game
+			I am an indie games developer. I plan to make videos about my game
+			development process aimed both at other developers and people who are
+			interested in the progress of my game
 		</p>
 		<p>
-			I create accessible and entertaining videos on my Youtube channel and my
-			blog covers the same material in more depth for those interested in the
-			details of how I created something
+			I (will) create accessible and entertaining videos on my Youtube channel
+			and my blog covers the same material in more depth for those interested in
+			the details of how I created something
 		</p>
 	</div>
 </Overlay>
