fix: get bootstrap using imports instead of global imports

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -84,6 +84,7 @@ import { name, paths } from "../scripts/data";
 						>
 							<Icon iconName="exclamation-triangle" />
 						</span>
+						<script src="../scripts/tooltips.ts"></script>
 					</li>
 					<li class="nav-item ms-auto my-auto">
 						<nav
