--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -11,6 +11,7 @@ import muffin404 from "../assets/404-muffin.png?url";
 			Sorry but there was an error, the page you have gone to does not exist.
 		</p>
 		<PixelImage
+			style="width:75%;"
 			class:list={"img-fluid rounded"}
 			src={muffin404}
 		/>
