fix: move text-center class to overlay

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import Icon from "./Icon";
 ---
 
 <div
-	class="z-3 sticky-bottom"
+	class="z-3 sticky-bottom mt-auto"
 	style="backdrop-filter: blur(2px); -webkit-backdrop-filter: blur(1px);"
 >
 	<nav
