--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -5,16 +5,11 @@ import muffin404 from "../assets/404-muffin.png?url";
 ---
 
 <Overlay title="404 | Page not found">
-	<div class="container text-center">
-		<h1>404</h1>
-		<p>
-			Sorry but there was an error, the page you have gone to does not exist.
-		</p>
-		<PixelImage
-			style="width:75%;"
-			class:list={"img-fluid rounded"}
-			src={muffin404}
-		/>
-		<p><em> BRUTAL</em></p>
-	</div>
+	<h1>404</h1>
+	<p>Sorry but there was an error, the page you have gone to does not exist.</p>
+	<PixelImage
+		src={muffin404}
+		class:list={"img-fluid rounded"}
+	/>
+	<p><em> BRUTAL</em></p>
 </Overlay>
