--- a/src/pages/discord.astro
+++ b/src/pages/discord.astro
@@ -5,12 +5,11 @@ import muffin404 from "../assets/404-muffin.png?url";
 ---
 
 <Overlay title="Discord">
-	<div class="container text-center">
-		<h1>Hey there! My discord isn't quite ready yet.</h1>
-		<p>In the meantime enjoy this horrific picture of muffinocide</p>
-		<PixelImage style="width:75%;"src={muffin404} />
-		<p>
-			<a href="/404"><em>View in context</em></a>
-		</p>
-	</div>
+	<h1>Hey there! My discord isn't quite ready yet.</h1>
+	<p>In the meantime enjoy this horrific picture of muffinocide</p>
+	<PixelImage
+		src={muffin404}
+		class:list={"img-fluid rounded"}
+	/>
+	<p><a href="/404"><em>View in context</em></a></p>
 </Overlay>
