fix: resize 404 page image

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -10,6 +10,7 @@ import muffin404 from "../assets/404-muffin.png?url";
 	<PixelImage
 		src={muffin404}
 		class:list={"img-fluid rounded"}
+		style="max-height: 50vh; width: auto; max-width: 100%; object-fit: contain;"
 	/>
 	<p><em> BRUTAL</em></p>
 </Overlay>
