--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,14 @@
 ---
 import { socials } from "../scripts/data";
 import Icon from "./Icon";
+import { execSync } from "child_process";
+let hash = execSync("git rev-parse --short HEAD") + "";
+let date =
+	new Date().getUTCFullYear() +
+	"/" +
+	new Date().getUTCMonth() +
+	"/" +
+	new Date().getUTCDate();
 ---
 
 <div
@@ -31,7 +39,7 @@ import Icon from "./Icon";
 					}
 					<li class="nav-item">
 						<div class="nav-link">
-							Last&nbsp;Updated&nbsp;{new Date().toDateString().trim()}
+							{hash}&nbsp;|&nbsp;{date}
 						</div>
 					</li>
 
