fix: prevent countdown resizing

--- a/src/components/Countdown.astro
+++ b/src/components/Countdown.astro
@@ -17,4 +17,6 @@ const { date, style, futureText, pastText } = Astro.props;
 	data-date={+new Date(date)}
 	data-future-text={futureText}
 	data-past-text={pastText}
-></time-counter>
+>
+	&nbsp;
+</time-counter>
