--- a/src/layouts/Overlay.astro
+++ b/src/layouts/Overlay.astro
@@ -25,7 +25,7 @@ const title =
 	).trim() + ` | ${name}`;
 ---
 
-<BaseLayout theme="dark">
+<BaseLayout>
 	<title slot="head">
 		{title}
 	</title>
