--- a/src/components/ThemePicker.astro
+++ b/src/components/ThemePicker.astro
@@ -3,7 +3,7 @@ import { Theme } from "../scripts/themes";
 import { themes } from "../scripts/data";
 import Icon from "./Icon";
 
-function hideThemes(theme: "auto" | "light" | "dark") {
+function hideThemes(theme: Theme) {
 	return `window.hideThemes('${theme}');`;
 }
 ---
@@ -63,5 +63,49 @@ function hideThemes(theme: "auto" | "light" | "dark") {
 		}
 	</ul>
 
-	<script src="../scripts/themes.ts"></script>
+	<script is:inline>
+		const Theme = {
+			LIGHT: "light",
+			DARK: "dark",
+			AUTO: "auto",
+		};
+		const darkMatchMedia = window.matchMedia("(prefers-color-scheme: dark)");
+		const lightMatchMedia = window.matchMedia("(prefers-color-scheme: light)");
+		var currentTheme = localStorage.getItem("theme") ?? Theme.AUTO;
+
+		darkMatchMedia.onchange = () => setTheme();
+		lightMatchMedia.onchange = () => setTheme();
+
+		document.addEventListener("astro:page-load", () => setTheme());
+		document.addEventListener("astro:after-swap", () => setTheme());
+
+		setTheme();
+		function resolveTheme(theme) {
+			if (!theme) return resolveTheme(currentTheme);
+			return theme == Theme.AUTO
+				? darkMatchMedia.matches
+					? Theme.DARK
+					: Theme.LIGHT
+				: theme;
+		}
+		function setTheme(theme) {
+			if (!theme) return setTheme(currentTheme);
+			currentTheme = theme;
+			localStorage.setItem("theme", theme);
+			document.documentElement.setAttribute("data-bs-theme", resolveTheme());
+
+			document.querySelectorAll(".theme-toggler").forEach((e) => {
+				e.style.display = e.classList.contains(`theme-toggler-${theme}`)
+					? "inherit"
+					: "none";
+			});
+			document.querySelectorAll(".theme-toggler-choice").forEach((e) => {
+				e.classList.toggle(
+					"active",
+					e.classList.contains(`theme-toggler-choice-${theme}`),
+				);
+			});
+		}
+		window.hideThemes = setTheme;
+	</script>
 </div>
