--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,13 +2,10 @@
 import { socials } from "../scripts/data";
 import Icon from "./Icon";
 import { execSync } from "child_process";
+import { formatDate } from "../scripts/lib";
+
 let hash = execSync("git rev-parse HEAD") + "";
-let date =
-	new Date().getUTCFullYear() +
-	"/" +
-	new Date().getUTCMonth() +
-	"/" +
-	new Date().getUTCDate();
+let date = formatDate(new Date());
 ---
 
 <div
