fix: use more descriptive elements for the header and footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ let hash = execSync("git rev-parse HEAD") + "";
 let date = formatDate(new Date());
 ---
 
-<div
+<footer
 	class="z-3 sticky-bottom mt-auto"
 	style="backdrop-filter: blur(2px); -webkit-backdrop-filter: blur(1px);"
 >
@@ -81,4 +81,4 @@ let date = formatDate(new Date());
 			</button>
 		</div>
 	</nav>
-</div>
+</footer>
