--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,7 +5,7 @@ import ThemePicker from "./ThemePicker.astro";
 import { name, paths } from "../scripts/data";
 ---
 
-<div
+<header
 	class="sticky-top z-4"
 	style="backdrop-filter: blur(5px); -webkit-backdrop-filter: blur(5px);"
 >
@@ -152,4 +152,4 @@ import { name, paths } from "../scripts/data";
 			</div>
 		</div>
 	</nav>
-</div>
+</header>
