--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,7 +1,9 @@
 ---
-import { capitaliseWords } from "../scripts/lib";
-import Icon, { images } from "../components/Icon";
+import { capitaliseWords } from "@scripts/lib";
+import Icon, { images } from "@components/Icon";
+import Breadcrumbs from "./Navbar/Breadcrumbs.astro";
 import ThemePicker from "./ThemePicker.astro";
+import LightmodeWarning from "./Navbar/LightmodeWarning.astro";
 import { name, paths } from "../scripts/data";
 ---
 
@@ -77,76 +79,10 @@ import { name, paths } from "../scripts/data";
 					</li>
 					<li class="nav-item my-auto">
 						<ThemePicker />
-						<span
-							class="dark-invisible"
-							data-bs-toggle="tooltip"
-							data-bs-title="This site was designed with dark mode in mind because I am a dark mode user. Light mode should work but may be less functional or have less styling"
-						>
-							<Icon iconName="exclamation-triangle" />
-						</span>
-						<script src="../scripts/tooltips.ts"></script>
+						<LightmodeWarning />
 					</li>
 					<li class="nav-item ms-auto my-auto">
-						<nav
-							aria-label="breadcrumb"
-							class="col-auto flex-row"
-						>
-							<ol
-								class="breadcrumb my-0 ps-2 py-2"
-								aria-label="breadcrumb"
-								style="flex-wrap: nowrap;"
-							>
-								{
-									Astro.url.pathname
-										.split("/")
-										.filter((v) => v.trim() != "")
-										.map((v, i, a) => {
-											if (v == "") return undefined;
-											let u = "";
-											for (const path of a.slice(0, i + 1)) {
-												if (path == "") continue;
-												u += "/" + path;
-											}
-											const active = i != a.length - 1;
-											switch (u) {
-												case "/post":
-													u = "/posts/1/";
-													break;
-												case "/posts":
-													u = "/posts/1/";
-													break;
-												default:
-													break;
-											}
-											return (
-												<li
-													class:list={[
-														"breadcrumb-item",
-														"pe-2",
-														{
-															active,
-														},
-													]}
-													style="flex-wrap: nowrap; display: flex;"
-												>
-													{!active ? (
-														<div class="link-secondary">
-															{capitaliseWords(v)}
-														</div>
-													) : (
-														<a
-															class="link-body-emphasis"
-															href={u}
-														>
-															{capitaliseWords(v)}
-														</a>
-													)}
-												</li>
-											);
-										})
-								}
-							</ol>
-						</nav>
+						<Breadcrumbs />
 					</li>
 				</ul>
 			</div>
