fix: unglobalise style in themepicker

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -44,3 +44,7 @@ body {
 	display: flex;
 	flex-direction: column;
 }
+.remove-before::before,
+.remove-after::after {
+	display: none !important;
+}
