--- a/src/components/ThemePicker.astro
+++ b/src/components/ThemePicker.astro
@@ -12,11 +12,7 @@ function hideThemes(theme: Theme) {
 	class="dropstart btn-group"
 	style="padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-y);"
 >
-	<style is:global>
-		.remove-before::before,
-		.remove-after::after {
-			display: none !important;
-		}
+	<style>
 		.theme-toggler-inactive {
 			display: none;
 		}
