fix: never collapse the footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ let date = formatDate(new Date());
 	style="backdrop-filter: blur(2px); -webkit-backdrop-filter: blur(1px);"
 >
 	<nav
-		class="navbar navbar-expand-sm bg-body-tertiary border-top"
+		class="navbar navbar-expand bg-body-tertiary border-top"
 		style="--bs-bg-opacity:0.5;"
 	>
 		<div class="container-fluid">
