fix: correct header link alignment

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -50,7 +50,7 @@ import { name, paths } from "../scripts/data";
 				id="headerSupportedContent"
 			>
 				<ul
-					class="navbar-nav w-100 mb-2 mb-lg-0 navbar-nav-scroll"
+					class="navbar-nav w-100 navbar-nav-scroll"
 					style="--bs-scroll-height: 50vh;"
 				>
 					{
